<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="200dp">

        <ImageView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/main_logo"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/slogan"

            android:textSize="19sp"
            android:fontFamily="@font/montserrat_bold">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonGoogleSignIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/yellow"

            android:text="@string/googleSignIn"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            android:textAllCaps="false">
        </Button>

        <Button
            android:id="@+id/buttonSkipSignIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/light_blue"

            android:text="@string/skipSignIn"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_bold"
            android:textAllCaps="false">

        </Button>
    </LinearLayout>


</LinearLayout>